# personalized-recommender-project

./: .gitignore  pyproject copy.toml  pyproject.toml  streamlit_app.py
notebooks/: computing_item_embeddings.ipynb  creating_deployments.ipynb  creating_deployments_llm_ranking.ipynb  feature_pipeline.ipynb  training_ranking_model.ipynb  training_retrieval_model.ipynb
recsys/: config.py
recsys/features/: articles.py  customers.py  embeddings.py  interaction.py  ranking.py  transactions.py
recsys/hopsworks_integration/: constants.py  feature_store.py  llm_ranking_serving.py  ranking_serving.py  two_tower_serving.py
recsys/hopsworks_integration/llm_ranker/: requirements.txt
recsys/inference/: llm_ranking_predictor.py  ranking_transformer.py
recsys/training/: ranking.py  two_tower.py
recsys/ui/: feature_group_updater.py  interaction_tracker.py  recommenders.py  utils.py
