[tool.poetry]
name = "personalized-recommender-project"
version = "0.1.0"
description = ""
authors = ["Massyl GH <massyl-6@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
polars = "^1.31.0"
ipykernel = "^6.30.0"
sentence-transformers = "^5.0.0"
pydantic-settings = "^2.10.1"
loguru = "^0.7.3"
hopsworks = "^4.3.1"
pyarrow = "^21.0.0"
d = "^0.2.2"
confluent-kafka = "^2.11.0"
tensorflow = "2.17.0"
torch = {version = "^2.8.0+cu129", source = "pytorch-gpu"}
torchvision = {version = "^0.23.0+cu129", source = "pytorch-gpu"}
torchaudio = {version = "^2.8.0+cu129", source = "pytorch-gpu"}
tensorflow-recommenders = "0.7.2"
matplotlib = "^3.10.5"
catboost = "^1.2.8"
langchain = "^0.3.27"
langchain-openai = "^0.3.32"


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu129"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
